make sure code blocks fit on mobile (scroll if needed)

--- a/assets/scss/tale/_code.scss
+++ b/assets/scss/tale/_code.scss
@@ -1,4 +1,6 @@
 .highlight pre {
   padding: 1rem;
   border-radius: 3px;
+  overflow-x: auto;
+  font-size: .8rem;
 }
